# data_adapter_fine

./: README.md  environment.yml  pyproject.toml  requirements.txt  setup.py
collections/electricity_data/: DE00_Mgl Cost.csv
collections/sedos_fine_mcar/: collection.json
collections/sedos_fine_mcar/SEDOS_industry_sector/global_emission_factors/srd_point_sedos/: global_emission_factors.csv  global_emission_factors.json
collections/sedos_fine_mcar/SEDOS_industry_sector/global_scalars/srd_point_draft/: global_scalars.csv  global_scalars.json
collections/sedos_fine_mcar/SEDOS_industry_sector/helper_co2_delivery/srd_point_sedos/: helper_co2_delivery.csv  helper_co2_delivery.json
collections/sedos_fine_mcar/SEDOS_industry_sector/helper_co2_storage_permanent/srd_point_sedos/: helper_co2_storage_permanent.csv  helper_co2_storage_permanent.json
collections/sedos_fine_mcar/SEDOS_transport_sector/tra_demand/srd_point_sedos/: tra_demand.csv  tra_demand.json
collections/sedos_fine_mcar/SEDOS_transport_sector/tra_road_mcar_bev_pass_battery_flex_bi_1/srd_point_sedos/: tra_road_mcar_bev_pass_battery_flex_bi_1.csv  tra_road_mcar_bev_pass_battery_flex_bi_1.json
data_adapter_fine/: __init__.py  constructor.py  dataAdapter.py  postprocessing.py  utils.py
data_adapter_fine/data_adapter_fine.egg-info/: PKG-INFO  SOURCES.txt
examples/: mini_example.py  transport_road_car.py  transport_road_mcar.py
examples/output/: f_tra_tokio.csv
structures/: hack-a-thon_by_file_name.csv  structure.xlsx
(+199 files in other folders)
